--- a/client/src/styles/create.css
+++ b/client/src/styles/create.css
@@ -18,7 +18,12 @@
 .form-create{
   color: rgb(163, 158, 158); 
 }
-
+.form-create{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .card-create-character{
     width: 190px;
     height: 500px;
