--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -7,6 +7,6 @@
 
 .div-cards {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, 300px);
     grid-template-rows: 1fr;
    } 
