--- a/client/src/styles/card.css
+++ b/client/src/styles/card.css
@@ -1,55 +1,93 @@
-div select {
-    margin-left: 50px;
-    border-radius: 4px;
-    padding: 7px;
-    margin-top: 10px;
-    border: none !important;
-    background-color: rgb(255, 255, 255);
-    color: #31073d;
-    outline: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato&display=swap');
+
+
 .card {
+
     margin: 25px;
     width: 17rem; 
-    border-radius: 10px;
-    background: #e0e0e0;
-    
-    box-sizing: content-box;
-    min-height: 150px;
-    outline: 5px;
-    outline-color: cadetblue;
+    /* border-radius: 10px; */
+    /* background: #3e3d3d;
+    background-image: linear-gradient(#3e3d3d, #2c2b2b); */
+    /* box-sizing: content-box; */
+    height: 220px;
+ 
+}
+.card:hover {
+    transform: scale(1.15);
+    transition: all 0.5s ease-in-out;
+}
+.image-card{
+    max-width: 100%;
+    height: auto;
+    border-radius: 20px;
+    margin-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent)
 }
 
-.name-card{
+.texto-card{
   /* font-family: "Optima, sans-serif"; */
-  font-size: 15px;
-  color: #000000;
-  text-decoration: none;
+  color: #cfcbcb;
+  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
-.genre {
-    display: flex;
-    color: #3b0218;
-    text-decoration: none;
-    justify-content: center;
-    align-items: center;
-    }
 
 
-    .rating-card {
-        font-size: 15px;
+
+    .rating-card {    
+        display: flex;
         justify-content: center;
-        align-items: right;
+        align-items: left;
+
+        color: rgb(184, 180, 180);
+        font-family: 'Inter', sans-serif;
+        font-family: 'Lato', sans-serif; 
+        font-size: 10px;
     }
-    .genre {
-        font-size: 15px;
+    .name.card{
+        font-size: 13px;
+        display: flex;
+        justify-content: center;
+        align-items: left;
+        color: white;
     }
+    .genre-card {
+        font-size: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color:rgb(184, 180, 180);
+    } 
+    
     .image-card {
-        padding: left 20px;
         position: relative;
-        left: 90px;
+        height: 190px;
+        width:fit-content;
+        /* left: 90px; */
+        /* width:fit-content; */
     }
+
     .texto-card {
-        justify-content: center;
+        display: flex;
+        /* flex-wrap: wrap; */
+        justify-content: flex-end;
+        justify-content: space-between;
+
         align-items: right;
+        font-size: 11px;
+        margin: 20px;
+        text-decoration: none;
+    }
+
+    /* .info-card{
+        position: absolute;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: 0;
 
     }
+    .info-card.active {
+        left: 0;
+    } */
