--- a/client/src/styles/create.css
+++ b/client/src/styles/create.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato&display=swap');
+
 
 /* .container-character-create {
     background-image: url("./character.jpg");
@@ -6,23 +8,38 @@
     background-size: cover;
     position:absolute;
   } */
+  .texto-videogame-create{
+    font-family: 'Inter', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-size: 15;
+    padding-top: 20px;
+    color: white;
+    display: flex;
+    align-items: center;
+
+  }
 .checkboxes-create {
   color: rgb(163, 158, 158);
 }
 .title-name{
   color: rgb(163, 158, 158);
+  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 .platforms-create{
   color: rgb(163, 158, 158); 
+  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
-.form-create{
-  color: rgb(163, 158, 158); 
-}
+
 .form-create{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
+  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif;
+  color: white;
 }
 .card-create-character{
     width: 190px;
@@ -35,6 +52,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Lato', sans-serif;
             }
 
 .contenedor-detail-character-create{
@@ -44,6 +63,8 @@
    justify-content: center;
    align-items: center;
    margin-bottom: 10px;
+   font-family: 'Inter', sans-serif;
+   font-family: 'Lato', sans-serif;
    }
 
    .formulario-character-create{
@@ -51,13 +72,34 @@
    flex-direction: column;
    align-items: center;
    justify-content: center;
+   font-family: 'Inter', sans-serif;
+   font-family: 'Lato', sans-serif;
    }
-   .error-character-create{
-    color: red;
-   }
+   .error-name-create{
+     color:rgb(203, 134, 134);
+     font-family: 'Inter', sans-serif;
+     font-family: 'Lato', sans-serif;
+    }
+    .error-image-create{
+      color:rgb(203, 134, 134);
+      font-family: 'Inter', sans-serif;
+      font-family: 'Lato', sans-serif;
+    }
+    .error-rating-create{
+     color: rgb(203, 134, 134);
+     font-family: 'Inter', sans-serif;
+     font-family: 'Lato', sans-serif;
+    }
+    .error-description-create{
+      color: rgb(203, 134, 134);
+      font-family: 'Inter', sans-serif;
+      font-family: 'Lato', sans-serif;
+     }
    .opciones-character-create{
     top: 20vh;
     left: 30vw;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Lato', sans-serif;
     /* display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,6 +110,8 @@
     letter-spacing: 2.5px;
     font-weight: 500;
     text-transform: uppercase;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Lato', sans-serif;
    }
 
    .button-ch {
@@ -95,4 +139,14 @@
   
   .button-ch:active {
     transform: translateY(-1px);
+  }
+  .div-boton {
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+  }
+  .buscando {
+    color: #23c483;
+    word-spacing: 12px;
   }
