--- a/client/src/styles/detail.css
+++ b/client/src/styles/detail.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato&display=swap');
+
 /* .card-detail {
     width: 350px;
     height: 550px;
@@ -13,6 +15,27 @@
    }
    .texto-detail{
     color: rgb(157, 154, 154);
+    padding-left: 30px;
+   }
+   .nombre-detail{
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Lato', sans-serif; 
+    font-size: 14px;
+   }
+   .rating-detail{
+   font-family: 'Inter', sans-serif;
+   font-family: 'Lato', sans-serif; 
+   font-size: 13px;
+   margin: 10px;
+   display: flex;
+ 
+   }
+   .texto-detail{
+    font-family: 'Inter', sans-serif;
+    font-family: 'Lato', sans-serif; 
+    font-size: 13px;
+    margin: 10px;
    }
    .contenedor-detail{
     padding: 30px;
@@ -21,11 +44,13 @@
    align-items: center;
    justify-content: center;
    }
+
 .loading-detail {
   color: white;
 }
 .nombre-card {
-font-family: 'Cinzel Decorative';
+  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif; 
 text-transform: uppercase;
 font-size: 10px;
 margin-top: 60px;
@@ -72,6 +97,18 @@ color: #fff;
       .button-detail:active {
         transform: translateY(-1px);
       }
+      .platforms-detail {
+        word-spacing: 3px;
+      }
+      /* .released-detail {
+        color:#23c483
+      } */
+  .columns-detail{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows:minmax(50px, auto);
+    word-spacing: 3px;
+  }
 /* 
 .id{
    font-size: 30px;
