--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -1,12 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato&display=swap');
+
+
+.titulo-home {
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif; 
+  background-color: rgb(95, 105, 105);
+}
+
+.videogames-home {
+  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif; 
+  color:#23c483;
+  letter-spacing: 10px;
+  padding: 50px;
+}
+
 .container-home {
        background-size: cover;
-       background-color: rgb(135, 101, 101);
+       /* background-color: rgb(135, 101, 101); */
        /* position:fixed; */
        overflow-y: scroll;
      }
-
+.link{
+  text-decoration: none;
+}
 .div-cards {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 300px);
-    grid-template-rows: 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows:minmax(50px, auto);
+    word-spacing: 3px;
+    padding: 10px;
+    padding-bottom: 10px;
+    
    } 
+
+   .not-found{
+    text-size-adjust: 15px;
+    color: rgb(103, 102, 101);
+   }
+   /* body{
+    background-color: rgb(53, 53, 53);
+   } */
+ 
+   .boton-home {
+    margin-right: 350px;
+    padding: 1.3em 3em;
+    font-size: 10px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  .boton-home:hover {
+    background-color: #23c483;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+  }
+  
+  .boton-home:active {
+    transform: translateY(-1px);
+  }
