--- a/client/src/styles/detail.css
+++ b/client/src/styles/detail.css
@@ -30,8 +30,14 @@
    margin: 10px;
    display: flex;
  
+
    }
-   .texto-detail{
+  .estrellitas {
+display: flex;
+order: 5;
+
+
+  }   .texto-detail{
     font-family: 'Inter', sans-serif;
     font-family: 'Lato', sans-serif; 
     font-size: 13px;
