--- a/client/src/styles/detail.css
+++ b/client/src/styles/detail.css
@@ -1,15 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato&display=swap');
 
-/* .card-detail {
-    width: 350px;
-    height: 550px;
-    border-radius: 30px;
-    background: #e0e0e0;
-    box-shadow: 15px 15px 30px #bebebe,
-                -15px -15px 30px #ffffff;
-   } */
-   
-
    :root{
     background-color: rgb(51, 50, 50);
    }
@@ -32,12 +22,11 @@
  
 
    }
-  .estrellitas {
+  .detail-stars {
 display: flex;
 order: 5;
-
-
-  }   .texto-detail{
+  }
+     .texto-detail{
     font-family: 'Inter', sans-serif;
     font-family: 'Lato', sans-serif; 
     font-size: 13px;
@@ -63,20 +52,9 @@ margin-top: 60px;
 margin-left: 110px;
 text-align: center;
 color: #fff;
-/* text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.438); */
 }
 
-/* .fondo-detail {
-    
-        background-image: url("./home.jpeg");
 
-        height: 100vh;
-        width: 100%;
-        background-size: cover;
-        background-color: #dbd349;
-        position:fixed;
-        overflow-y: scroll;
-      } */
       .button-detail {
         padding: 1.3em 3em;
         font-size: 10px;
@@ -91,6 +69,7 @@ color: #fff;
         transition: all 0.3s ease 0s;
         cursor: pointer;
         outline: none;
+        margin-top: 40px;
       }
       
       .button-detail:hover {
@@ -106,33 +85,57 @@ color: #fff;
       .platforms-detail {
         word-spacing: 3px;
       }
-      /* .released-detail {
-        color:#23c483
-      } */
+ 
   .columns-detail{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows:minmax(50px, auto);
     word-spacing: 3px;
   }
-/* 
-.id{
-   font-size: 30px;
-   color: rgb(46, 13, 87);
-   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.438)
-}
 
-.abutton{
-    color: rgb(124, 15, 15);
-    background-color: rgb(57, 16, 110);
-    display: inline-block;
-	padding:15px;
-    margin-top:0px;
-}
-
-
-
-.lista{
-    font-size: 22px;
-    margin-top: 50px;
-} */
+  /* loader  */
+  .progress-loader {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+  }
+  
+  .progress-loader {
+    width: 150px;
+    background: rgba(236, 236, 238, 0.253);
+    height: 3px;
+    border-radius: 7px;
+  }
+  
+  .progress {
+    content: '';
+    width: 1px;
+    height: 3px;
+    border-radius: 7px;
+    background: rgb(255, 255, 255);
+    transition: 0.5s;
+    animation: loading1274 2s ease infinite;
+  }
+  
+  @keyframes loading1274 {
+    0% {
+      width: 0%;
+    }
+  
+    10% {
+      width: 10%;
+    }
+  
+    50% {
+      width: 40%;
+    }
+  
+    60% {
+      width: 60%;
+    }
+  
+    100% {
+      width: 100%;
+    }
+  }
