--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -8,7 +8,12 @@
 html {
   font-size: 62.5%;
 }
-.titulo-home {
+/* header  */
+.navBar {
+  /* position: fixed; */
+  top: 0;
+  width: 100%;
+  height: 150px;
   display: flex;
   align-items: center;
   padding-left: 3rem;
@@ -17,12 +22,40 @@ html {
   background-color: rgb(95, 105, 105);
 }
 
-.videogames-home {
+.navBar .title {
   font-family: 'Inter', sans-serif;
   font-family: 'Lato', sans-serif; 
   color:#23c483;
   letter-spacing: 10px;
   padding: 50px;
+}
+/* create button  */
+.navBar .new  {
+  margin-right: 350px;
+  padding: 1.3em 3em;
+  font-size: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.navBar .new:hover {
+  background-color: #23c483;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+.navBar .new:active {
+  transform: translateY(-1px);
 }
 
 .container-home {
@@ -33,6 +66,7 @@ html {
   text-decoration: none;
 }
 .div-cards {
+  /* margin-top: 100px; */
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows:minmax(50px, auto);
@@ -42,41 +76,12 @@ html {
     
    } 
 
-   .not-found{
+   /* .not-found{
     text-size-adjust: 15px;
     color: rgb(103, 102, 101);
-   }
-   /* body{
-    background-color: rgb(53, 53, 53);
    } */
- 
-   .boton-home {
-    margin-right: 350px;
-    padding: 1.3em 3em;
-    font-size: 10px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-  }
-  
-  .boton-home:hover {
-    background-color: #23c483;
-    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
-  
-  .boton-home:active {
-    transform: translateY(-1px);
-  }
+
+
 
   /* loader */
   .progress-loader {
