--- a/client/src/styles/pg.css
+++ b/client/src/styles/pg.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato&display=swap');
 
-html {
-    font-size: 62.5%;
-  }
-
-.botonera {
+main {
     display: flex;
     flex-direction:row;
     margin-top: 30px;
@@ -13,27 +9,34 @@ html {
 .arrows{
     font-family: 'Inter', sans-serif;
     font-family: 'Lato', sans-serif;
-}
-.number{
-    justify-content: center;
+    font-size: 2rem;
+      cursor: pointer;
 }
 
-.letraNegrita {
+.bold {
     color: aliceblue;
+
     letter-spacing: 12px;
     text-decoration-style: solid;
-    font-weight: 1000;
+    font-weight: bold;
+    cursor: pointer;
 }
 
-.letraStandard {
+.standard {
     text-decoration: none;
     letter-spacing: 12px;
+    cursor: pointer;
 }
-.paginado {
+.standard:hover {
+    font-weight: bolder;
+}
+.pg {
     display: flex;
     justify-content: center;
-    align-items: center;
     font-family: 'Inter', sans-serif;
     font-family: 'Lato', sans-serif;
-    cursor: pointer;
+    font-size: 1.6rem;
+}
+.paginado:hover{
+    font-weight: bolder;
 }
