--- a/client/src/styles/card.css
+++ b/client/src/styles/card.css
@@ -2,83 +2,68 @@
 
 
 .card {
-
-    margin: 25px;
+    /* margin: 25px; */
     width: 17rem; 
-    /* border-radius: 10px; */
-    /* background: #3e3d3d;
-    background-image: linear-gradient(#3e3d3d, #2c2b2b); */
-    /* box-sizing: content-box; */
     height: 220px;
- 
+   position: relative;
 }
+
 .card:hover {
     transform: scale(1.15);
     transition: all 0.5s ease-in-out;
 }
-.image-card{
-    max-width: 100%;
-    height: auto;
-    border-radius: 20px;
+
+.card__picture{
+    width: 180px;
+    height: 120px;
     margin-top: 0px;
     padding-bottom: 0px;
     margin-bottom: 0px;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent)
-}
+    }
 
-.texto-card{
- 
+.card__text{
   color: #cfcbcb;
   font-family: 'Inter', sans-serif;
   font-family: 'Lato', sans-serif;
+  font-size: 11px;
+  margin: 20px;
+  text-decoration: none;
 }
 
-.stars {
+/* .card__text {
+    font-size: 11px;
+    margin: 20px;
+    text-decoration: none;
+} */
+
+.card__title{
+    font-size: 13px;
     display: flex;
-    order: 5;
+    justify-content: center;
+    align-items: left;
+    color: white;
+    /* outline: black;
+    position: absolute;
+    top: 80px; */
+}
+/* .card__box {
+width: 17rem;
+height: 50px;
+color: black;
+position: absolute;
+top: 80px;
+} */
+
+.card__stars {
+    display: flex;
+    justify-content: right;
       }
 
-    .rating-card {    
-        display: flex;
-        justify-content: center;
-        align-items: left;
-
-        color: rgb(184, 180, 180);
-        font-family: 'Inter', sans-serif;
-        font-family: 'Lato', sans-serif; 
-        font-size: 10px;
-    }
-    .name.card{
-        font-size: 13px;
-        display: flex;
-        justify-content: center;
-        align-items: left;
-        color: white;
-    }
-    .genre-card {
-        font-size: 10px;
+ .card__genre {
+       font-size: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
         color:rgb(184, 180, 180);
     } 
     
-    .image-card {
-        position: relative;
-        height: 190px;
-        width:fit-content;
-        /* left: 90px; */
-        /* width:fit-content; */
-    }
-
-    .texto-card {
-        display: flex;
-        /* flex-wrap: wrap; */
-        justify-content: flex-end;
-        justify-content: space-between;
-
-        align-items: right;
-        font-size: 11px;
-        margin: 20px;
-        text-decoration: none;
-    }
