--- a/client/src/styles/card.css
+++ b/client/src/styles/card.css
@@ -14,8 +14,8 @@
 }
 
 .card__picture{
-    width: 180px;
-    height: 120px;
+    width: 220px;
+    height: 135px;
     margin-top: 0px;
     padding-bottom: 0px;
     margin-bottom: 0px;
@@ -40,8 +40,11 @@
     color: white;
     outline: black;
     position: absolute;
-    top:60%;
-    translate: (0, -50%);
+    top: 50%;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
+    /* translate: (0, -50%); */
 }
 /* .card__box {
 width: 17rem;
@@ -53,7 +56,7 @@ top: 80px;
 
 .card__stars {
     display: flex;
-    /* justify-content: right; */
+    justify-items: end;
     position: absolute;
     top: 8px;
     right: 12px;
